New scripts, notebooks, pages report

--- a/report/ada2018.tex
+++ b/report/ada2018.tex
@@ -20,7 +20,7 @@
 \usepackage{url}
 \usepackage{latexsym}
 
-%\setlength\titlebox{5cm}
+%\setlength\titlebox{15cm}
 
 % You can expand the titlebox if you need extra space
 % to show all the authors. Please do not make the titlebox
@@ -28,14 +28,14 @@
 % in the camera-ready version and ask you to change it back.
 
 
-\title{Name of your project}
+\title{Analyzing Helpfulness of Amazon Reviews}
 
-\author{First Author \\
-  {\tt email@domain} \\\And
-  Second Author \\
-  {\tt email@domain} \\\And
-Third Author \\
-{\tt email@domain} \\}
+\author{Yuliana Havryshchuk \\
+  {\tt yuliana.havryshchuk@epfl.ch} \\\And
+  Jonathan Donas \\
+  {\tt jonathan.donas@epfl.ch} \\\And
+Julien Harbulot \\
+{\tt julien.harbulot@epfl.ch} \\}
 
 \date{}
 
