--- a/Beauty Analysis.ipynb
+++ b/Beauty Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "0  RE1WMA50104QQ            5           28                 N  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "0     True            406  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +275,393 @@
     "#  average length of not helpful review\n",
     "print(\"\\naverage length of not helpful review\")\n",
     "print(df[df.helpful == False].review_length.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "helpful count\n",
+      "15907\n",
+      "\n",
+      "unhelpful count\n",
+      "982\n"
+     ]
+    }
+   ],
+   "source": [
+    "### DFB \n",
+    "dfb = df\n",
+    "dfb['helpful'] = dfb.helpfulness > 0.90\n",
+    "# Num helpful:\n",
+    "print(\"\\nhelpful count\")\n",
+    "print(dfb[dfb['helpful'] == True].customer_id.count())\n",
+    "\n",
+    "dfu1 = df\n",
+    "dfu1 = dfu1[dfu1.helpfulness < 0.2]\n",
+    "# Num unhelpful:\n",
+    "print(\"\\nunhelpful count\")\n",
+    "print(dfu1.customer_id.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "unhelpful count\n",
+      "621\n"
+     ]
+    }
+   ],
+   "source": [
+    "### dfu2\n",
+    "dfu2 = pd.read_json('data/auto_final.json', lines=True)\n",
+    "dfu2 = dfu2[dfu2.total_votes > 5]\n",
+    "dfu2 = dfu2.dropna()\n",
+    "dfu2['review_length'] = dfu2['review_body'].apply(len)\n",
+    "dfu2 = dfu2[dfu2.review_length <= 5000]\n",
+    "\n",
+    "dfu2['helpfulness'] = (dfu2.helpful_votes / dfu2.total_votes).round(2)\n",
+    "dfu2 = dfu2[dfu2.helpfulness < 0.2]\n",
+    "# Num unhelpful:\n",
+    "print(\"\\nunhelpful count\")\n",
+    "print(dfu2.customer_id.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "unhelpful count\n",
+      "446\n"
+     ]
+    }
+   ],
+   "source": [
+    "### dfu3\n",
+    "dfu3 = pd.read_json('data/baby_final.json', lines=True)\n",
+    "dfu3 = dfu3[dfu3.total_votes > 5]\n",
+    "dfu3 = dfu3.dropna()\n",
+    "dfu3['review_length'] = dfu3['review_body'].apply(len)\n",
+    "dfu3 = dfu3[dfu3.review_length <= 5000]\n",
+    "\n",
+    "dfu3['helpfulness'] = (dfu3.helpful_votes / dfu3.total_votes).round(2)\n",
+    "dfu3 = dfu3[dfu3.helpfulness < 0.2]\n",
+    "# Num unhelpful:\n",
+    "print(\"\\nunhelpful count\")\n",
+    "print(dfu3.customer_id.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "unhelpful count\n",
+      "22358\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>helpful_votes</th>\n",
+       "      <th>product_category</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>review_body</th>\n",
+       "      <th>review_date</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>star_rating</th>\n",
+       "      <th>total_votes</th>\n",
+       "      <th>verified_purchase</th>\n",
+       "      <th>review_length</th>\n",
+       "      <th>helpfulness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4016816</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060540745</td>\n",
+       "      <td>The book that I order was &amp;#34;Number of Stars...</td>\n",
+       "      <td>2013-08-25</td>\n",
+       "      <td>R2QNQC8E4JHLFY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>502</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17134341</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060540745</td>\n",
+       "      <td>Never again will I read a Jerry Spinelli book....</td>\n",
+       "      <td>2004-07-29</td>\n",
+       "      <td>R14HSFMEB5BQZB</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>N</td>\n",
+       "      <td>911</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>38106223</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060740531</td>\n",
+       "      <td>These stories are slow paced and quite element...</td>\n",
+       "      <td>2012-10-23</td>\n",
+       "      <td>R353P40BPZA7AZ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>N</td>\n",
+       "      <td>123</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>24963507</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>006085295X</td>\n",
+       "      <td>I have not finished with the book, but so far ...</td>\n",
+       "      <td>2005-09-26</td>\n",
+       "      <td>R141PQMZIKHEHF</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>N</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>34677710</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>006085295X</td>\n",
+       "      <td>This book is a wonderful tool for parents who ...</td>\n",
+       "      <td>2005-06-01</td>\n",
+       "      <td>R2L8XHGRJZ9IE7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>N</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>39554975</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060929081</td>\n",
+       "      <td>The cover and the title of this book gave me t...</td>\n",
+       "      <td>2012-04-18</td>\n",
+       "      <td>R3APPLT7XYKZIY</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1420</td>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>39016128</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060929081</td>\n",
+       "      <td>The book's indictments of the political and mi...</td>\n",
+       "      <td>2005-11-10</td>\n",
+       "      <td>R1KX2WM25ORU8I</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>N</td>\n",
+       "      <td>952</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>49230870</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060929081</td>\n",
+       "      <td>Supremely polemical narrative putting himself ...</td>\n",
+       "      <td>2015-02-12</td>\n",
+       "      <td>RF20KIGRZ7PTO</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1342</td>\n",
+       "      <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>43916960</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0060929081</td>\n",
+       "      <td>The whole book is saying that if the politicia...</td>\n",
+       "      <td>2001-05-20</td>\n",
+       "      <td>RQCVP3LTUWLMY</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>N</td>\n",
+       "      <td>351</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>20433459</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>0061470902</td>\n",
+       "      <td>Not the content anticipated.  Did not enjoy at...</td>\n",
+       "      <td>2008-12-28</td>\n",
+       "      <td>R217ZPP5MVXD6C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    customer_id  helpful_votes product_category  product_id  \\\n",
+       "2       4016816              0            Books  0060540745   \n",
+       "3      17134341              2            Books  0060540745   \n",
+       "11     38106223              0            Books  0060740531   \n",
+       "46     24963507              2            Books  006085295X   \n",
+       "51     34677710              3            Books  006085295X   \n",
+       "52     39554975              1            Books  0060929081   \n",
+       "64     39016128              4            Books  0060929081   \n",
+       "66     49230870              2            Books  0060929081   \n",
+       "78     43916960              3            Books  0060929081   \n",
+       "91     20433459              3            Books  0061470902   \n",
+       "\n",
+       "                                          review_body review_date  \\\n",
+       "2   The book that I order was &#34;Number of Stars...  2013-08-25   \n",
+       "3   Never again will I read a Jerry Spinelli book....  2004-07-29   \n",
+       "11  These stories are slow paced and quite element...  2012-10-23   \n",
+       "46  I have not finished with the book, but so far ...  2005-09-26   \n",
+       "51  This book is a wonderful tool for parents who ...  2005-06-01   \n",
+       "52  The cover and the title of this book gave me t...  2012-04-18   \n",
+       "64  The book's indictments of the political and mi...  2005-11-10   \n",
+       "66  Supremely polemical narrative putting himself ...  2015-02-12   \n",
+       "78  The whole book is saying that if the politicia...  2001-05-20   \n",
+       "91  Not the content anticipated.  Did not enjoy at...  2008-12-28   \n",
+       "\n",
+       "         review_id  star_rating  total_votes verified_purchase  review_length  \\\n",
+       "2   R2QNQC8E4JHLFY            1           11                 Y            502   \n",
+       "3   R14HSFMEB5BQZB            1           12                 N            911   \n",
+       "11  R353P40BPZA7AZ            1           11                 N            123   \n",
+       "46  R141PQMZIKHEHF            5           12                 N            150   \n",
+       "51  R2L8XHGRJZ9IE7            5           18                 N             91   \n",
+       "52  R3APPLT7XYKZIY            2           16                 N           1420   \n",
+       "64  R1KX2WM25ORU8I            5           25                 N            952   \n",
+       "66   RF20KIGRZ7PTO            2           12                 N           1342   \n",
+       "78   RQCVP3LTUWLMY            3           20                 N            351   \n",
+       "91  R217ZPP5MVXD6C            1           17                 Y             82   \n",
+       "\n",
+       "    helpfulness  \n",
+       "2          0.00  \n",
+       "3          0.17  \n",
+       "11         0.00  \n",
+       "46         0.17  \n",
+       "51         0.17  \n",
+       "52         0.06  \n",
+       "64         0.16  \n",
+       "66         0.17  \n",
+       "78         0.15  \n",
+       "91         0.18  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### dfu4\n",
+    "dfu4 = pd.read_json('data/books_final.json', lines=True)\n",
+    "dfu4 = dfu4[dfu4.total_votes > 5]\n",
+    "dfu4 = dfu4.dropna()\n",
+    "dfu4['review_length'] = dfu4['review_body'].apply(len)\n",
+    "dfu4 = dfu4[dfu4.review_length <= 5000]\n",
+    "\n",
+    "dfu4['helpfulness'] = (dfu4.helpful_votes / dfu4.total_votes).round(2)\n",
+    "dfu4 = dfu4[dfu4.helpfulness < 0.2]\n",
+    "# Num unhelpful:\n",
+    "print(\"\\nunhelpful count\")\n",
+    "print(dfu4.customer_id.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### dfu5\n",
+    "dfu5 = pd.read_json('data/electronics_final.json', lines=True)\n",
+    "dfu5 = dfu5[dfu5.total_votes > 5]\n",
+    "dfu5 = dfu5.dropna()\n",
+    "dfu5['review_length'] = dfu5['review_body'].apply(len)\n",
+    "dfu5 = dfu5[dfu5.review_length <= 5000]\n",
+    "\n",
+    "dfu5['helpfulness'] = (dfu5.helpful_votes / dfu5.total_votes).round(2)\n",
+    "dfu5 = dfu5[dfu5.helpfulness < 0.2]\n",
+    "# Num unhelpful:\n",
+    "print(\"\\nunhelpful count\")\n",
+    "print(dfu5.customer_id.count())"
    ]
   },
   {
@@ -943,157 +1330,6 @@
     "print(confusion_matrix(Y_a_test, preds))\n",
     "print('\\n')\n",
     "print(classification_report(Y_a_test, preds))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Using classifier on extreme reviews"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ = df[df.total_votes > 30]\n",
-    "df_e1 = df_[df_.helpfulness < 0.2]\n",
-    "df_e2 = df_[df_.helpfulness > 0.99]\n",
-    "\n",
-    "df_e = pd.concat([df_e1,df_e2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "98"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_e1.customer_id.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "503"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_e2.customer_id.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df_e['review_body']\n",
-    "Y = df_e['helpful']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bow_transformer = CountVectorizer(analyzer=text_process).fit(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = bow_transformer.transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=101)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nb = MultinomialNB()\n",
-    "nb.fit(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  3  24]\n",
-      " [  6 148]]\n",
-      "\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "       False       0.33      0.11      0.17        27\n",
-      "        True       0.86      0.96      0.91       154\n",
-      "\n",
-      "   micro avg       0.83      0.83      0.83       181\n",
-      "   macro avg       0.60      0.54      0.54       181\n",
-      "weighted avg       0.78      0.83      0.80       181\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "preds = nb.predict(X_test)\n",
-    "\n",
-    "print(confusion_matrix(Y_test, preds))\n",
-    "print('\\n')\n",
-    "print(classification_report(Y_test, preds))"
    ]
   },
   {
